--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* global CSS */
+
+  /* in your global CSS or within @layer base */
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  
